[Work] Commands以外をNull安全に